--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -12,10 +12,10 @@
     overflow-y: scroll;
     scrollbar-gutter: stable;
     display: grid;
-    grid-template-columns: repeat(2, fit-content(536px));
+    grid-template-columns: repeat(1, 13px 536px);
     grid-template-rows: repeat(1, fit-content(80px));
     align-items: center;
-    gap: 16px 13px;
+    gap: 16px 22px;
 }
 
 ::-webkit-scrollbar {
