Сделан счётсчик и прпавильный подсчёт стоимости бургера

--- a/src/components/burger-constructor/burger-constructore.module.css
+++ b/src/components/burger-constructor/burger-constructore.module.css
@@ -29,3 +29,9 @@
 ::-webkit-scrollbar-thumb {
     background-color: #8585AD;
 }
+
+.getIngredient{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
