--- a/src/components/burger-constructor/burger-constructore.module.css
+++ b/src/components/burger-constructor/burger-constructore.module.css
@@ -10,12 +10,8 @@
     padding: 0 8px 0 0;
     max-height: 464px;
     overflow-y: scroll;
+    list-style-type: none;
     scrollbar-gutter: stable;
-    display: grid;
-    grid-template-columns: repeat(1, 13px 536px);
-    grid-template-rows: repeat(1, fit-content(80px));
-    align-items: center;
-    gap: 16px 22px;
 }
 
 ::-webkit-scrollbar {
