--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -11,3 +11,26 @@
     z-index: 3;
     top: 0;
 }
+.popup {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 720px;
+    background-color: #1C1C21;
+    border-radius: 40px;
+    z-index: 3;
+}
+
+.close{
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    display: flex;
+    z-index: 4;
+    cursor: pointer;
+}
