Исправлены все ошибки в консоли, модалки перенесены в другой компонент, выненсена из components папка hooks

--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -4,6 +4,20 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.overlay::before{
+    content: "";
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     opacity: .4;
     z-index: 2;
     background-color: #000;
