--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,3 +1,12 @@
+.main{
+    margin: 120px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .popup {
     margin: 0;
     padding: 0;
@@ -17,6 +26,14 @@
     min-height: 64px;
     display: flex;
     justify-content: space-between;
+}
+
+.headCenter{
+    padding: 0;
+    min-width: 640px;
+    min-height: 64px;
+    display: flex;
+    justify-content: center;
 }
 
 .img{
