--- a/src/components/pages/constructore/burger-ingredients/ingredients-box-scroll/ingredients-box-scroll.module.css
+++ b/src/components/pages/constructore/burger-ingredients/ingredients-box-scroll/ingredients-box-scroll.module.css
@@ -30,3 +30,10 @@
     margin: 0;
     padding: 0;
 }
+
+.link{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    color: #F2F2F3;
+}
