--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,5 +1,14 @@
 .main{
-    margin: 120px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.mainTop{
+    margin: 80px 0 0 0;
     padding: 0;
     display: flex;
     flex-direction: column;
