--- a/src/components/order-info-rectangle/order-info-rectangle.module.css
+++ b/src/components/order-info-rectangle/order-info-rectangle.module.css
@@ -2,7 +2,6 @@
     margin: 16px 0 0 0;
     padding: 0;
     display: flex;
-    max-width: 584px;
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
@@ -20,14 +19,14 @@
     padding: 0;
     display: flex;
     justify-content: space-between;
-    min-width: 536px;
+    min-width: 100%;
 }
 
 .title {
     margin: 0;
     padding: 0;
     display: flex;
-    max-width: 536px;
+    max-width: 100%;
 }
 
 .ingredients {
@@ -36,7 +35,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 536px;
+    min-width: 100%;
 }
 
 .imgBox {
@@ -130,4 +129,21 @@
     margin: 0;
     padding: 0;
     display: flex;
+}
+
+.default{
+    margin: -16px 0 0 0;
+    padding: 0;
+}
+
+.ready{
+    margin: -16px 0 0 0;
+    padding: 0;
+    color: #0CC;
+}
+
+.cancel{
+    margin: -16px 0 0 0;
+    padding: 0;
+    color: rgb(214, 88, 88);
 }
