--- a/src/components/order-numbers-info/order-numbers-info.module.css
+++ b/src/components/order-numbers-info/order-numbers-info.module.css
@@ -28,8 +28,8 @@
     padding: 0;
     list-style-type: none;
     display: grid;
-    grid-template-columns: repeat(3, fit-content(70px));
-    grid-template-rows: repeat(10, fit-content(24px));
+    grid-template-columns: repeat(2, fit-content(70px));
+    grid-template-rows: repeat(5, fit-content(24px));
     grid-auto-flow: column;
     gap: 8px 30px;
 }
@@ -38,4 +38,10 @@
     margin: 0;
     padding: 0;
     color: #0CC;
+}
+
+.total {
+    margin: 0;
+    padding: 0;
+    text-shadow: 0px 4px 32px rgba(51, 51, 255, 0.50), 0px 0px 8px rgba(51, 51, 255, 0.25), 0px 0px 16px rgba(51, 51, 255, 0.25);
 }
