--- a/src/pages/feeds/feed.module.css
+++ b/src/pages/feeds/feed.module.css
@@ -22,20 +22,18 @@
     grid-area: orders;
     display: flex;
     flex-direction: column;
-    max-height: 500px;
+    max-height: 744px;
     overflow-y: scroll;
-}
-
-.info {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.list{
-    margin: 0;
-    padding: 0;
     list-style-type: none;
 }
 
+.link{
+    margin: 16px 0 0 0;
+    padding: 0;
+    text-decoration: none;
+    color: #F2F2F3;
+}
+
+.link:first-of-type{
+    margin: 0;
+}
