--- a/src/components/app-header/work-with-burgers/burger-constructor/burger-constructor.module.css
+++ b/src/components/app-header/work-with-burgers/burger-constructor/burger-constructor.module.css
@@ -1,22 +1,22 @@
 .button {
-    padding: 16px 20px;
-    border-radius: 40px;
-    max-width: 178px;
-    max-height: 56px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-decoration: none;
+  padding: 16px 20px;
+  border-radius: 40px;
+  max-width: 178px;
+  max-height: 56px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
 }
 
-.button:hover{
-    cursor: pointer;
-    box-shadow: 0 0 12px #6633FF;
-    transition: 0.15s;
+.button:hover {
+  cursor: pointer;
+  box-shadow: 0 0 12px #6633ff;
+  transition: 0.15s;
 }
 
 .paragraph {
-    display: flex;
-    align-items: center;
-    color: #F2F2F3;
+  display: flex;
+  align-items: center;
+  color: #f2f2f3;
 }
