--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -1,116 +1,116 @@
 .main {
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    width: 640px;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  width: 640px;
 }
 
 .mainTop {
-    margin: 80px auto;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    max-width: 640px;
+  margin: 80px auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 640px;
 }
 
 .number {
-    margin: 40px 0 0 0;
-    padding: 0;
-    min-height: 64px;
-    display: flex;
-    align-items: flex-start;
+  margin: 40px 0 0 0;
+  padding: 0;
+  min-height: 64px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .numberTop {
-    margin: 40px auto 0 auto;
-    padding: 0;
-    min-height: 64px;
-    display: flex;
-    align-items: center;
+  margin: 40px auto 0 auto;
+  padding: 0;
+  min-height: 64px;
+  display: flex;
+  align-items: center;
 }
 
 .default {
-    padding: 0;
+  padding: 0;
 }
 
 .ready {
-    padding: 0;
-    color: #0CC;
+  padding: 0;
+  color: #0cc;
 }
 
 .cancel {
-    padding: 0;
-    color: rgb(214, 88, 88);
+  padding: 0;
+  color: rgb(214, 88, 88);
 }
 
 .composition {
-    margin: 60px 0 0 0;
-    padding: 0;
+  margin: 60px 0 0 0;
+  padding: 0;
 }
 
 .ingredients {
-    margin: 24px 0 0 0;
-    padding: 0 8px 0 0;
-    max-height: 312px;
-    overflow-y: scroll;
-    list-style-type: none;
+  margin: 24px 0 0 0;
+  padding: 0 8px 0 0;
+  max-height: 312px;
+  overflow-y: scroll;
+  list-style-type: none;
 }
 
 .ingredientBox {
-    margin: 16px 0 0 0;
-    padding: 0;
-    display: flex;
-    min-width: 100%;
-    align-items: center;
+  margin: 16px 0 0 0;
+  padding: 0;
+  display: flex;
+  min-width: 100%;
+  align-items: center;
 }
 
 .ingredientBox:first-of-type {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .date {
-    margin: 48px 0 0 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    min-width: 100%;
+  margin: 48px 0 0 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  min-width: 100%;
 }
 
 .img {
-    margin: 0;
-    padding: 0;
-    border-radius: 100px;
-    background-color: #131316;
-    border: 2px solid;
-    border-color: #7f01f4;
-    height: 56px;
-    width: 56px;
-    object-fit: cover;
+  margin: 0;
+  padding: 0;
+  border-radius: 100px;
+  background-color: #131316;
+  border: 2px solid;
+  border-color: #7f01f4;
+  height: 56px;
+  width: 56px;
+  object-fit: cover;
 }
 
 .name {
-    margin: 0 0 0 16px;
-    padding: 0;
-    width: 320px;
+  margin: 0 0 0 16px;
+  padding: 0;
+  width: 320px;
 }
 
 .price {
-    margin: 0 0 0 16px;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    min-width: 192px;
+  margin: 0 0 0 16px;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  min-width: 192px;
 }
 
 .num {
-    margin: 0 8px 0 0;
-    padding: 0;
+  margin: 0 8px 0 0;
+  padding: 0;
 }
 
 .fullPrice {
-    margin: 0 0 40px 0;
-    padding: 0;
-    display: flex;
+  margin: 0 0 40px 0;
+  padding: 0;
+  display: flex;
 }
