--- a/src/pages/constructore/burger-constructor/burger-constructore.module.css
+++ b/src/pages/constructore/burger-constructor/burger-constructore.module.css
@@ -1,40 +1,40 @@
 .ingredientsInfo {
-    display: flex;
-    padding: 0;
-    flex-direction: column;
-    align-items: flex-end;
+  display: flex;
+  padding: 0;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .mainBox {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 }
 
 .scrollBox {
-    margin: 8px 0 8px -20px;
-    padding: 0 8px 0 0;
-    max-height: 464px;
-    overflow-y: scroll;
-    list-style-type: none;
-    scrollbar-gutter: stable;
+  margin: 8px 0 8px -20px;
+  padding: 0 8px 0 0;
+  max-height: 464px;
+  overflow-y: scroll;
+  list-style-type: none;
+  scrollbar-gutter: stable;
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #2F2F37;
+  background: #2f2f37;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #8585AD;
+  background-color: #8585ad;
 }
 
 .getIngredient {
-    margin: 0;
-    padding: 0;
-    display: flex;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
