--- a/src/pages/orders/orders.module.css
+++ b/src/pages/orders/orders.module.css
@@ -1,21 +1,21 @@
-.main{
-    margin: 0;
-    padding: 0 8px 0 0;
-    display: flex;
-    flex-direction: column;
-    max-height: 744px;
-    min-width: 856px;
-    overflow-y: scroll;
-    list-style-type: none;
+.main {
+  margin: 0;
+  padding: 0 8px 0 0;
+  display: flex;
+  flex-direction: column;
+  max-height: 744px;
+  min-width: 856px;
+  overflow-y: scroll;
+  list-style-type: none;
 }
 
-.link{
-    margin: 24px 0 0 0;
-    padding: 0;
-    text-decoration: none;
-    color: #F2F2F3;
+.link {
+  margin: 24px 0 0 0;
+  padding: 0;
+  text-decoration: none;
+  color: #f2f2f3;
 }
 
-.link:first-of-type{
-    margin: 0;
+.link:first-of-type {
+  margin: 0;
 }
