--- a/src/pages/feeds/feed.module.css
+++ b/src/pages/feeds/feed.module.css
@@ -37,3 +37,13 @@
 .link:first-of-type {
   margin: 0;
 }
+
+.loader {
+  margin: 0;
+  padding: 0;
+  min-height: 80vh;
+  min-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
